# pre-commit-test

./: .pre-commit-config.yaml  pyproject.toml
pre_commit_test/: test_ci.py
